# DQN-NonMarkovian

./: .gitignore  .gitmodules  NonMarkovianTrainer.py  README.md  agent_config.py  build_dqn.py  conda_setup.sh  config.json  example.py  main.py  one_hot.py  utils.py
Material - Reasoning Agents 2020-2021/: Final Topic Match - Reasoning Agents 2020_2021 (Students).xlsx
case_2_colors_hard_start/: actor.weights  actor_base.weights  critic.weights  critic_base.weights  history.pkl  map.txt  nets.py  params.cfg  reward-dfa.dot
gym-sapientino-case-master/: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
gym-sapientino-case-master/.vim/: coc-settings.json
gym-sapientino-case-master/gym_sapientino_case/: __main__.py  env.py
gym-sapientino-case-master/scripts/: test.py
gym-sapientino-case-master/tests/: .dir
log_dir/: reward-dfa.dot
maps/: map1_easy.txt  map2_easy.txt  map2_hard.txt  map3_easy.txt  map3_large.txt  map4_easy.txt
model/: agent-0.index  agent-10.index  agent-650.index  agent-660.index  agent-670.index  agent-680.index  agent-690.index  agent-700.index  agent-710.index  agent-720.index  agent-730.index  agent-740.index  agent.json  checkpoint
models/map1_easy_act-experience-update_synthetic/: agent-1000.index  agent-410.index  agent-420.index  agent-430.index  agent-440.index  agent-450.index  agent-460.index  agent-470.index  agent-480.index  agent-490.index  agent-500.index  agent-910.index  agent-920.index  agent.json  (+8 more)
report/: main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.out  main.synctex(busy)  main.tex
(+45 files in other folders)
